          unique constraint
        - dbicadmin now better supports catalyst-style config files, by
          unrolling 'config_info' hashkeys
        - Multiple Improvements MSSQL over DBD::ADO
          - Transaction support
          - Support for VARCHAR(MAX)/VARBINARY(MAX)/NVARCHAR(MAX) datatypes
          - Nomalization of retrieved GUID values

    * Fixes
        - Fix SkipFirst and FirstSkip limit dialects (Informix and Firebird)
        - Fix "Skimming limit" dialects (Top, FetchFirst) to properly check
          the order_by criteria for stability
        - Fix "Skimming limit" dialects (Top, FetchFirst) to propagate
          non-selected order criteria when part of a larger subquery
        - Fix RowNumberOver and all "skimming limits" to correctly assemble
          bind values when supplied for both select and order_by
        - Fix all subquery-based dialects to not lose a subquery fragment
          when we both select and order by the result of the same subquery
        - Fix the Sybase hubrid limit dialect (RowCountOrGenericSubQ) losing
          Group/Having/Order clauses when called without an offset (RT#73244)
        - No longer generate incorrect SQL on ->as_query called on resultsets
          with software_limit enabled
        - A number of corner case fixes of void context populate() with \[]
        - Fix corner case of forked children disconnecting the parents DBI
          handle
        - Improve identity/autoinc retrieval code in MSSQL and Sybase -
          should reduce weird side-effects especially with populate()
        - Explicitly disable DBD::ODBC batch operations (as of DBD::ODBC 1.35)
          for the following drivers too buggy to handle the optimized path:
          - FreeTDS ODBC driver (when used with MSSQL)
          - The Firebird ODBC driver
          - The MSAccess ODBC driver
        - Explicitly disable DBD::ODBC dynamic_cursors when using freetds 0.83